Add activity notation
